2003-10-08  Hans-Peter Nilsson  <hp@bitrange.com>

	* ldexp.c (fold_name) <case DEFINED>: Set section of result to
	abs_output_section.

2003-10-07  Bob Wilson  <bob.wilson@acm.org>

	* emulparams/elf32xtensa.sh (OTHER_READONLY_SECTIONS,
	OTHER_READWRITE_SECTIONS, OTHER_SECTIONS): Set section addresses to
	zero for relocatable links.

2003-10-07  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* configure.host (HOSTING_LIBS): Define for hppa*-*-linux*.

2003-10-07  Nathan Sidwell  <nathan@codesourcery.com>

	* ldwrite.c (unsplittable_name): New.
	(clone_section): Strip existing numeric suffix. Only truncate names
	for coff targets.
	(split_sections): Use unsplittable_name.

2003-10-06  Nick Clifton  <nickc@redhat.com>

	* lexsup.c (parse_args): Report unresolved symbols in shared
	libraries when creating a dynamic executable.  This is a
	restoration of the default behaviour for previous versions of
	the linker.

2003-10-06  Matt Thomas <matt@3am-software.com>

	* emulparams/hppanbsd.sh: Remove OUTPUT_FORMAT.
	* emulparams/hppaobsd.sh: Add OUTPUT_FORMAT="elf32-hppa".

2003-10-06  Robert Millan  <robertmh@gnu.org>

	* configure.tgt: Match GNU/KNetBSD with new knetbsd*-gnu triplet.

2003-10-02  Ivan Warren <ivan@vmfacility.fr>

        * pe-dll.c (make_one): Correct sym def order & pick right sym for
	.idata$7 reloc.

2003-09-30  Chris Demetriou  <cgd@broadcom.com>

	* NEWS: Add an indication of the cutoff for 2.14.

2003-09-30  Chris Demetriou  <cgd@broadcom.com>

	* ldmain.c (get_emulation): Ignore "-mips64r2".

2003-09-03  Robert Millan  <robertmh@gnu.org>

	* configure.host: Match GNU/KFreeBSD with new kfreebsd*-gnu
	triplet.
	* configure.tgt: Likewise.

2003-08-29  Jafa  <jafa@silicondust.com>

	* emulparams/elf32ip2k.sh (TEMPLATE_NAME): Define.

2003-08-21  Nick Clifton  <nickc@redhat.com>

	* po/tr.po: Updated Turkish translation.

2003-08-20  Nick Clifton  <nickc@redhat.com>

	* ldmain.c: Initialise the new fields in bfd_link_info to
        NOT_YET_SET.