@@ -661,16 +661,15 @@ parse_args (unsigned argc, char **argv)
 	case OPTION_CALL_SHARED:
 	  config.dynamic_link = TRUE;
 	  /* When linking against shared libraries, the default behaviour is
-	     to report any unresolved references.  This is for backwards
-	     comptability with previous linker behaviour.  Whilst strictly
-	     speaking it is not a failure to encounter unresolved symbols at
-	     link time - the symbol *might* be available at load time - it is
-	     nevertheless necessary for the correct execution of the autoconf
-	     package.  (It needs to be able to detect functions that are not
-	     provided by the host OS).  Since this package is used by lots of
-	     projects, maintaining the old linker behaviour is important.  */
+	     to report any unresolved references.  Although strictly speaking
+	     it is not a failure to encounter unresolved symbols at link time
+	     - the symbol *might* be available at load time - it is a strong
+	     indication that the resulting executable will not work.  Plus it
+	     is necessary for the correct execution of the autoconf package,
+	     which needs to be able to detect functions that are not provided
+	     by the host OS.  */
 	  if (link_info.unresolved_syms_in_objects == RM_NOT_YET_SET)
-	    link_info.unresolved_syms_in_objects = RM_IGNORE;
+	    link_info.unresolved_syms_in_objects = how_to_report_unresolved_symbols;
 	  if (link_info.unresolved_syms_in_shared_libs == RM_NOT_YET_SET)
 	    link_info.unresolved_syms_in_shared_libs = how_to_report_unresolved_symbols;
 	  break;
